--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"axios": "^0.27.2",
+		"mobx": "^6.6.1",
+		"mobx-react-lite": "^3.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-loader-spinner": "^5.1.5",
+		"react-promise-tracker": "^2.1.0",
 		"react-scripts": "5.0.1",
+		"react-spinners": "^0.13.3",
 		"typescript": "^4.4.2",
 		"web-vitals": "^2.1.0"
 	},
